--- a/MyBrew/Base.lproj/Main.storyboard
+++ b/MyBrew/Base.lproj/Main.storyboard
@@ -658,8 +658,15 @@ Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euis
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="558"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Aky-TJ-e25">
-                                            <rect key="frame" x="20" y="140" width="560" height="400"/>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O4x-4Z-Dhb" customClass="RotatedView" customModule="MyBrew" customModuleProvider="target">
+                                            <rect key="frame" x="20" y="10" width="560" height="120"/>
+                                            <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="120" id="nTg-GL-BNL"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Aky-TJ-e25">
+                                            <rect key="frame" x="20" y="140" width="560" height="600"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H8b-Sj-1Ct">
                                                     <rect key="frame" x="0.0" y="0.0" width="560" height="60"/>
@@ -668,10 +675,10 @@ Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euis
                                                         <constraint firstAttribute="height" constant="60" id="1Y0-eF-IOt"/>
                                                     </constraints>
                                                 </view>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jDR-ji-nAG">
-                                                    <rect key="frame" x="0.0" y="340" width="560" height="60"/>
+                                                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jDR-ji-nAG">
+                                                    <rect key="frame" x="0.0" y="540" width="560" height="60"/>
                                                     <subviews>
-                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ife-fj-g37">
+                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ife-fj-g37">
                                                             <rect key="frame" x="8" y="8" width="544" height="44"/>
                                                             <color key="backgroundColor" red="0.80000001190000003" green="0.40000000600000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                             <state key="normal" title="Button"/>
@@ -694,9 +701,12 @@ Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euis
                                                         <constraint firstAttribute="trailing" secondItem="ife-fj-g37" secondAttribute="trailing" constant="8" id="wmF-o5-zzo"/>
                                                     </constraints>
                                                 </view>
-                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pEc-re-wdF">
-                                                    <rect key="frame" x="0.0" y="60" width="560" height="280"/>
+                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pEc-re-wdF">
+                                                    <rect key="frame" x="0.0" y="60" width="560" height="400"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="400" id="mTk-Tv-bGs"/>
+                                                    </constraints>
                                                     <prototypes>
                                                         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SingleQuestionCell" rowHeight="55" id="fZM-HC-HpI" customClass="SingleQuestionCell" customModule="MyBrew" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="28" width="560" height="55"/>
@@ -749,17 +759,20 @@ Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euis
                                                     </prototypes>
                                                 </tableView>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.80000001190000003" green="0.40000000600000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="jDR-ji-nAG" secondAttribute="bottom" id="6Pp-Ut-zV2"/>
                                                 <constraint firstAttribute="trailing" secondItem="H8b-Sj-1Ct" secondAttribute="trailing" id="6Rb-5H-cNS"/>
                                                 <constraint firstItem="pEc-re-wdF" firstAttribute="top" secondItem="H8b-Sj-1Ct" secondAttribute="bottom" id="A3y-eR-HZu"/>
                                                 <constraint firstAttribute="trailing" secondItem="jDR-ji-nAG" secondAttribute="trailing" id="AM3-Pp-1EZ"/>
                                                 <constraint firstAttribute="bottom" secondItem="jDR-ji-nAG" secondAttribute="bottom" id="EeT-lV-IT5"/>
+                                                <constraint firstItem="H8b-Sj-1Ct" firstAttribute="top" secondItem="jDR-ji-nAG" secondAttribute="bottom" constant="80" id="JYy-XC-uOh"/>
                                                 <constraint firstItem="H8b-Sj-1Ct" firstAttribute="top" secondItem="Aky-TJ-e25" secondAttribute="top" id="OCn-xw-F5K"/>
                                                 <constraint firstItem="pEc-re-wdF" firstAttribute="leading" secondItem="Aky-TJ-e25" secondAttribute="leading" id="PvH-II-EEq"/>
                                                 <constraint firstAttribute="trailing" secondItem="pEc-re-wdF" secondAttribute="trailing" id="T1R-b8-m2v"/>
                                                 <constraint firstItem="jDR-ji-nAG" firstAttribute="leading" secondItem="Aky-TJ-e25" secondAttribute="leading" id="XBo-Oq-WFW"/>
-                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="400" id="eBh-WO-YEw"/>
+                                                <constraint firstItem="H8b-Sj-1Ct" firstAttribute="top" secondItem="jDR-ji-nAG" secondAttribute="bottom" id="acJ-F4-ztX"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="600" id="eBh-WO-YEw"/>
                                                 <constraint firstItem="H8b-Sj-1Ct" firstAttribute="leading" secondItem="Aky-TJ-e25" secondAttribute="leading" id="g4a-2b-lMh"/>
                                                 <constraint firstItem="jDR-ji-nAG" firstAttribute="top" secondItem="pEc-re-wdF" secondAttribute="bottom" id="hSw-UF-1wl"/>
                                                 <constraint firstAttribute="height" constant="400" id="ngT-5A-3zp"/>
@@ -769,15 +782,12 @@ Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euis
                                                 <mask key="constraints">
                                                     <exclude reference="ngT-5A-3zp"/>
                                                     <exclude reference="uoe-53-XMI"/>
+                                                    <exclude reference="JYy-XC-uOh"/>
+                                                    <exclude reference="acJ-F4-ztX"/>
+                                                    <exclude reference="EeT-lV-IT5"/>
+                                                    <exclude reference="hSw-UF-1wl"/>
                                                 </mask>
                                             </variation>
-                                        </view>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O4x-4Z-Dhb" customClass="RotatedView" customModule="MyBrew" customModuleProvider="target">
-                                            <rect key="frame" x="20" y="10" width="560" height="120"/>
-                                            <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="120" id="nTg-GL-BNL"/>
-                                            </constraints>
                                         </view>
                                     </subviews>
                                     <constraints>
@@ -785,7 +795,6 @@ Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euis
                                         <constraint firstItem="Aky-TJ-e25" firstAttribute="leading" secondItem="n3i-zZ-IuW" secondAttribute="leading" constant="20" id="C23-nh-xgo"/>
                                         <constraint firstItem="O4x-4Z-Dhb" firstAttribute="leading" secondItem="n3i-zZ-IuW" secondAttribute="leading" constant="20" id="Jmg-Xh-Ey0"/>
                                         <constraint firstItem="Aky-TJ-e25" firstAttribute="top" secondItem="n3i-zZ-IuW" secondAttribute="top" constant="140" identifier="ContainerViewTop" id="LU0-zP-9kR"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Aky-TJ-e25" secondAttribute="bottom" constant="10" id="NkY-JO-UUb"/>
                                         <constraint firstAttribute="trailing" secondItem="Aky-TJ-e25" secondAttribute="trailing" constant="20" id="feq-94-UNW"/>
                                         <constraint firstItem="O4x-4Z-Dhb" firstAttribute="top" secondItem="n3i-zZ-IuW" secondAttribute="top" constant="10" identifier="ForegroundViewTop" id="v7E-jl-6Hb"/>
                                     </constraints>
