--- a/MyBrew/Base.lproj/Main.storyboard
+++ b/MyBrew/Base.lproj/Main.storyboard
@@ -701,11 +701,11 @@ Sed adipiscing ornare risus. Morbi est est, blandit sit amet, sagittis vel, euis
                                                         <constraint firstAttribute="trailing" secondItem="ife-fj-g37" secondAttribute="trailing" constant="8" id="wmF-o5-zzo"/>
                                                     </constraints>
                                                 </view>
-                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pEc-re-wdF">
+                                                <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pEc-re-wdF">
                                                     <rect key="frame" x="0.0" y="60" width="560" height="400"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="400" id="mTk-Tv-bGs"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="480" id="mTk-Tv-bGs"/>
                                                     </constraints>
                                                     <prototypes>
                                                         <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SingleQuestionCell" rowHeight="55" id="fZM-HC-HpI" customClass="SingleQuestionCell" customModule="MyBrew" customModuleProvider="target">
